--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,10 @@ trim_trailing_whitespace = true
 [*.php]
 indent_style = tab
 indent_size = 4
+curly_bracket_next_line = true
+spaces_around_operators = true
+spaces_around_brackets = true
+indent_brace_style = KNF
 
 [*.scss]
 indent_style = tab
