--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "wp-a-z-listing",
-	"version": "0.7.0",
-	"author": "Daniel Llewellyn @ Bowl Hat",
+	"author": "Daniel Llewellyn <daniel@bowlhat.net>",
+	"repository": "https://github.com/bowlhat/wp-a-z-listing.git",
+	"license": "GPL-2.0+",
 	"devDependencies": {
 		"es6-promise": "^3.0.2",
 		"gulp": "^3.9.0",
