attempt fix for bug reported about object access of array
see: https://wordpress.org/support/topic/warning-attempt-to-assign-property-of-non-object-3/#post-9309348
also fixes some testing errors from phpcs/WordPress Coding Standards

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ before_script:
 
 script:
   - phpunit
-  - ~/.composer/vendor/bin/phpcs -p --standard=WordPress-Extra --extensions=php .
+  - ~/.composer/vendor/bin/phpcs -p --standard=WordPress-Extra --extensions=php --ignore=tests .
