--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: php
 
+dist: trusty
+sudo: false
+
 notifications:
   email:
     on_success: never
@@ -11,6 +14,7 @@ php:
   - 5.5
   - 5.6
   - 7.0
+  - 7.1
   - hhvm
 
 env:
