--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,16 @@ notifications:
     on_failure: change
 
 php:
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
   - 7.0
   - 7.1
-  - hhvm
+
+matrix:
+  include:
+    - php: 5.3
+      dist: precise
 
 env:
   - WP_VERSION=latest WP_MULTISITE=0
