--- a/.editorconfig
+++ b/.editorconfig
@@ -1,19 +1,22 @@
+# This file is for unifying the coding style for different editors and IDEs
+# editorconfig.org
+
+# WordPress Coding Standards
+# https://make.wordpress.org/core/handbook/coding-standards/
+
 root = true
 
 [*]
+charset = utf-8
 end_of_line = lf
 insert_final_newline = true
-charset = utf-8
 trim_trailing_whitespace = true
-
-[*.php]
 indent_style = tab
 indent_size = 4
-curly_bracket_next_line = true
-spaces_around_operators = true
-spaces_around_brackets = true
-indent_brace_style = KNF
 
-[*.scss]
-indent_style = tab
-indent_size = 4
+[{.jshintrc,*.json,*.yml}]
+indent_style = space
+indent_size = 2
+
+[{*.txt,wp-config-sample.php}]
+end_of_line = crlf
