--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-﻿node_modules
-packages
-.vs
-*.tmp
-.idea
-
-/vendor/
+.DS_Store
+phpcs.xml
+phpunit.xml
+Thumbs.db
+wp-cli.local.yml
+node_modules/
+*.sql
+*.tar.gz
+*.zip
