--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,24 @@ matrix:
     - php: 7.0
       env: WP_VERSION=latest
     - php: 5.6
+      env: WP_VERSION=3.5
+    - php: 5.6
+      env: WP_VERSION=3.6
+    - php: 5.6
+      env: WP_VERSION=3.7
+    - php: 5.6
+      env: WP_VERSION=3.8
+    - php: 5.6
+      env: WP_VERSION=3.9
+    - php: 5.6
+      env: WP_VERSION=4.0
+    - php: 5.6
+      env: WP_VERSION=4.1
+    - php: 5.6
+      env: WP_VERSION=4.2
+    - php: 5.6
+      env: WP_VERSION=4.3
+    - php: 5.6
       env: WP_VERSION=4.4
     - php: 5.6
       env: WP_VERSION=latest
@@ -30,6 +48,12 @@ matrix:
       env: WP_VERSION=trunk
     - php: 5.6
       env: WP_TRAVISCI=phpcs
+    - php: 5.5
+      env: WP_VERSION=latest
+      dist: precise
+    - php: 5.4
+      env: WP_VERSION=latest
+      dist: precise
     - php: 5.3
       env: WP_VERSION=latest
       dist: precise
