--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
     "grunt-babel": "^7.0.0",
-    "grunt-wp-i18n": "~0.5.0",
-    "grunt-wp-readme-to-markdown": "~1.0.0"
+    "grunt-sass": "^2.1.0",
+    "grunt-wp-i18n": "^0.5.4",
+    "grunt-wp-readme-to-markdown": "^2.0.1"
   },
   "dependencies": {}
 }
