--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-	"phpcs.standard": "WordPress-Extra"
+	"phpcs.standard": "WordPress-Core"
 }
