this now works. full caching.

--- a/.distignore
+++ b/.distignore
@@ -4,14 +4,20 @@
 .git
 .gitignore
 .gitlab-ci.yml
+.idea
+.jshintrc
 .travis.yml
+.vscode
 .DS_Store
 Thumbs.db
+assets
 behat.yml
 bin
 circle.yml
+composer.phar
 composer.json
 composer.lock
+docker-compose.yml
 Gruntfile.js
 package.json
 package-lock.json
