--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.3",
     "grunt-babel": "^7.0.0",
-    "grunt-sass": "^2.1.0",
-    "grunt-wp-i18n": "^0.5.4",
+    "grunt-sass": "^3.0.1",
+    "grunt-wp-i18n": "^1.0.2",
     "grunt-wp-readme-to-markdown": "^2.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node-sass": "^4.9.2"
+  }
 }
