--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
 	"version": "0.7.0",
 	"author": "Daniel Llewellyn @ Bowl Hat",
 	"devDependencies": {
-		"es6-promise": "^3.0.2",
-		"gulp": "^3.9.0",
-		"gulp-postcss": "^6.0.1",
 		"autoprefixer": "^6.1.2",
-		"gulp-sourcemaps": "^1.6.0",
-		"gulp-sass": "^2.1.0"
+		"es6-promise": "^3.0.2",
+		"gulp": "^4.0.0",
+		"gulp-postcss": "^6.0.1",
+		"gulp-sass": "^2.1.0",
+		"gulp-sourcemaps": "^1.6.0"
 	}
 }
