--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "grunt-babel": "^7.0.0",
     "grunt-sass": "^3.0.1",
     "grunt-wp-i18n": "^1.0.2",
-    "grunt-wp-readme-to-markdown": "^2.0.1"
-  },
-  "dependencies": {
+    "grunt-wp-readme-to-markdown": "^2.0.1",
     "node-sass": "^4.9.2"
   }
 }
