--- a/.travis.yml
+++ b/.travis.yml
@@ -16,26 +16,23 @@ cache:
   directories:
     - $HOME/.composer/cache
 
+php:
+  - 7.2
+  - 7.1
+  - 7.0
+  - 5.6
+env:
+  - WP_VERSION=4.6
+  - WP_VERSION=4.7
+  - WP_VERSION=4.8
+  - WP_VERSION=4.9
+  - WP_VERSION=latest
+  - WP_VERSION=trunk
+
 matrix:
   include:
-    - php: 7.1
-      env: WP_VERSION=latest
-    - php: 7.0
-      env: WP_VERSION=latest
-    - php: 5.6
-      env: WP_VERSION=4.6
-    - php: 5.6
-      env: WP_VERSION=4.7
-    - php: 5.6
-      env: WP_VERSION=4.8
-    - php: 5.6
-      env: WP_VERSION=4.9
-    - php: 5.6
-      env: WP_VERSION=latest
     - php: 5.6
       env: WP_VERSION=trunk
-    - php: 5.6
-      env: WP_TRAVISCI=phpcs
     - php: 5.5
       env: WP_VERSION=latest
       dist: precise
@@ -45,6 +42,8 @@ matrix:
     - php: 5.3
       env: WP_VERSION=latest
       dist: precise
+    - php: 7.0
+      env: WP_TRAVISCI=phpcs
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
