--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-﻿node_modules
-packages
-.vs
-*.tmp
-.idea
-
-/vendor/
+.DS_Store
+*.sql
+*.tar.gz
+*.zip
+vendor/
+composer.phar
+node_modules/
+phpcs.xml
+phpunit.xml
+Thumbs.db
+wp-cli.local.yml
