--- a/.svnignore
+++ b/.svnignore
@@ -1,24 +1,23 @@
-/node_modules/
-packages
-.vs
-*.tmp
-.idea
-*.phar
-
-/vendor/
-/tests/
-/assets/
-/bin/
-.git
-Dockunit.json
-Gulpfile.js
-composer.*
-docker-compose.yml
-package.json
-phpcs-custom-rules.xml
-phpunit.xml
-.travis.yml
-.gitignore
-.editorconfig
+._.*
+.DS_Store
 .eslint*
-*.scss
+.git
+.gitignore
+.idea
+.travis.yml
+.vs
+*.phar
+*.sql
+*.tar.gz
+*.tmp
+*.zip
+assets/
+bin/
+node_modules/
+vendor/
+Dockunit.json
+phpcs.xml
+phpunit.xml
+Thumbs.db
+wp-cli.local.yml
+
