--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-	"name": "wp-a-z-listing",
-	"version": "0.7.0",
-	"author": "Daniel Llewellyn @ Bowl Hat",
-	"devDependencies": {
-		"autoprefixer": "^6.1.2",
-		"es6-promise": "^3.0.2",
-		"gulp": "^4.0.0",
-		"gulp-postcss": "^6.0.1",
-		"gulp-sass": "^2.1.0",
-		"gulp-sourcemaps": "^1.6.0"
-	}
+  "name": "wp-a-z-listing",
+  "version": "2.0.0",
+  "main": "Gruntfile.js",
+  "author": "Daniel Llewellyn",
+  "scripts": {
+    "build": "grunt"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "grunt": "^1.0.3",
+    "grunt-babel": "^7.0.0",
+    "grunt-sass": "^3.0.1",
+    "grunt-wp-i18n": "^1.0.2",
+    "grunt-wp-readme-to-markdown": "^2.0.1",
+    "node-sass": "^4.9.2"
+  }
 }
