--- a/.travis.yml
+++ b/.travis.yml
@@ -17,32 +17,40 @@ cache:
     - $HOME/.composer/cache
 
 php:
-  - 7.3
   - 7.2
   - 7.1
   - 7.0
   - 5.6
+  - 5.5
+  - 5.4
 env:
-  - WP_VERSION=4.6
-  - WP_VERSION=4.7
-  - WP_VERSION=4.8
-  - WP_VERSION=4.9
-  - WP_VERSION=5.0
-  - WP_VERSION=latest
-  - WP_VERSION=trunk
+  matrix:
+    - WP_VERSION=4.6
+    - WP_VERSION=4.7
+    - WP_VERSION=4.8
+    - WP_VERSION=4.9
+    - WP_VERSION=5.0
+    - WP_VERSION=latest
+    - WP_VERSION=trunk
 
 matrix:
   include:
-    - php: 5.5
-      env: WP_VERSION=latest
-      dist: precise
-    - php: 5.4
-      env: WP_VERSION=latest
+    - php: 5.3
+      env: WP_VERSION=4.6
       dist: precise
     - php: 5.3
-      env: WP_VERSION=latest
+      env: WP_VERSION=4.7
       dist: precise
-    - php: 7.3
+    - php: 5.3
+      env: WP_VERSION=4.8
+      dist: precise
+    - php: 5.3
+      env: WP_VERSION=4.9
+      dist: precise
+    - php: 5.3
+      env: WP_VERSION=5.0
+      dist: precise
+    - php: 7.2
       env: WP_TRAVISCI=phpcs
 
 before_script:
