--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,11 @@ cache:
     - $HOME/.composer/cache
 
 php:
-  - 7.3
-  - 7.2
-  - 7.1
-  - 7.0
-  - 5.6
+  - '7.3'
+  - '7.2'
+  - '7.1'
+  - '7.0'
+  - '5.6'
 env:
   matrix:
     - WP_VERSION=4.6
@@ -34,7 +34,7 @@ env:
 
 matrix:
   include:
-    - php: 7.3
+    - php: '7.3'
       env: WP_TRAVISCI=phpcs
 
 before_script:
