--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 sudo: false
-dist: trusty
+dist: xenial
+
+services:
+  - mysql
 
 language: php
 
@@ -17,12 +20,11 @@ cache:
     - $HOME/.composer/cache
 
 php:
-  - 7.2
-  - 7.1
-  - 7.0
-  - 5.6
-  - 5.5
-  - 5.4
+  - '7.3'
+  - '7.2'
+  - '7.1'
+  - '7.0'
+  - '5.6'
 env:
   matrix:
     - WP_VERSION=4.6
@@ -35,22 +37,7 @@ env:
 
 matrix:
   include:
-    - php: 5.3
-      env: WP_VERSION=4.6
-      dist: precise
-    - php: 5.3
-      env: WP_VERSION=4.7
-      dist: precise
-    - php: 5.3
-      env: WP_VERSION=4.8
-      dist: precise
-    - php: 5.3
-      env: WP_VERSION=4.9
-      dist: precise
-    - php: 5.3
-      env: WP_VERSION=5.0
-      dist: precise
-    - php: 7.2
+    - php: '7.3'
       env: WP_TRAVISCI=phpcs
 
 before_script:
