--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
-    "name": "dllewellyn/wp-a-z-listing",
+    "name": "bowlhat/wp-a-z-listing",
+    "description": "The A-Z Listing plugin for WordPress",
     "require-dev": {
-        "phpunit/phpunit": "^7.2"
+        "phpunit/phpunit": "^7.2",
+        "squizlabs/php_codesniffer": "^3.4",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
+        "wp-coding-standards/wpcs": "^2.1"
     },
     "license": "GPL2+",
     "authors": [
