--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,13 @@ cache:
   directories:
     - $HOME/.composer/cache
 
+php:
+  - '7.3'
+  - '7.2'
+  - '7.1'
+  - '7.0'
+  - '5.6'
+
 env:
   matrix:
     # single site
@@ -55,16 +62,6 @@ env:
 matrix:
   include:
     - php: '7.3'
-      env: PHPUNIT_VERSION="^8"
-    - php: '7.2'
-      env: PHPUNIT_VERSION="^7"
-    - php: '7.1'
-      env: PHPUNIT_VERSION="^7"
-    - php: '7.0'
-      env: PHPUNIT_VERSION="^6"
-    - php: '5.6'
-      env: PHPUNIT_VERSION="^5"
-    - php: '7.3'
       env: WP_TRAVISCI=phpcs
 
 before_script:
@@ -76,9 +73,9 @@ before_script:
       echo "xdebug.ini does not exist"
     fi
   - |
-    if [[ ! -z "$WP_VERSION" ]] && [[ "$WP_TRAVISCI" != "phpcs" ]] ; then
+    if [[ ! -z "$WP_VERSION" ]] && [[ "$WP_TRAVISCI" != phpcs ]] ; then
       bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-      composer global require "phpunit/phpunit=$PHPUNIT_VERSION"
+      composer global require "phpunit/phpunit=^5|^6|^7|^8"
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
@@ -88,7 +85,7 @@ before_script:
 
 script:
   - |
-    if [[ ! -z "$WP_VERSION" ]] && [[ "$WP_TRAVISCI" != "phpcs" ]] ; then
+    if [[ ! -z "$WP_VERSION" ]] && [[ "$WP_TRAVISCI" != phpcs ]] ; then
       phpunit
     fi
   - |
