--- a/.travis.yml
+++ b/.travis.yml
@@ -75,20 +75,20 @@ before_script:
   - |
     if [[ ! -z "$WP_VERSION" ]] && [[ "$WP_TRAVISCI" != phpcs ]] ; then
       bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-      composer global require "phpunit/phpunit=^5|^6|^7|^8"
+      composer global require "phpunit/phpunit=4.8.*|5.7.*"
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
       composer global require wp-coding-standards/wpcs
-      phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
+      $HOME/.composer/vendor/bin/phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
     fi
 
 script:
   - |
     if [[ ! -z "$WP_VERSION" ]] && [[ "$WP_TRAVISCI" != phpcs ]] ; then
-      phpunit
+      $HOME/.composer/vendor/bin/phpunit
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
-      phpcs
+      $HOME/.composer/vendor/bin/phpcs
     fi
