--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-babel": "^7.0.0",
     "grunt-sass": "^3.0.2",
     "grunt-wp-i18n": "^1.0.3",
-    "grunt-wp-readme-to-markdown": "^2.0.1"
+    "grunt-wp-readme-to-markdown": "^2.0.1",
+    "node-sass": "^4.12.0"
   }
 }
