--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,6 @@ php:
 env:
   matrix:
     # single site
-    - WP_VERSION=4.6
-    - WP_VERSION=4.7
-    - WP_VERSION=4.8
-    - WP_VERSION=4.9
     - WP_VERSION=5.0
     - WP_VERSION=5.1
     - WP_VERSION=5.2
@@ -40,14 +36,6 @@ env:
     - WP_VERSION=trunk
 
     # multisite
-    - WP_VERSION=4.6
-      WP_MULTISITE=1
-    - WP_VERSION=4.7
-      WP_MULTISITE=1
-    - WP_VERSION=4.8
-      WP_MULTISITE=1
-    - WP_VERSION=4.9
-      WP_MULTISITE=1
     - WP_VERSION=5.0
       WP_MULTISITE=1
     - WP_VERSION=5.1
@@ -63,6 +51,23 @@ matrix:
   include:
     - php: '7.3'
       env: WP_TRAVISCI=phpcs
+
+    - php: '5.6'
+      env: WP_VERSION=4.6
+    - php: '5.6'
+      env: WP_VERSION=4.7
+    - php: '5.6'
+      env: WP_VERSION=4.8
+    - php: '5.6'
+      env: WP_VERSION=4.9
+    - php: '5.6'
+      env: WP_VERSION=4.6 WP_MULTISITE=1
+    - php: '5.6'
+      env: WP_VERSION=4.7 WP_MULTISITE=1
+    - php: '5.6'
+      env: WP_VERSION=4.8 WP_MULTISITE=1
+    - php: '5.6'
+      env: WP_VERSION=4.9 WP_MULTISITE=1
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
