--- a/.svnignore
+++ b/.svnignore
@@ -1,11 +1,15 @@
 ._.*
 .DS_Store
+.editorconfig
 .eslint*
 .git
 .gitignore
 .idea
+.jshintrc
 .travis.yml
 .vs
+.vscode
+*.msbuildproj
 *.phar
 *.sql
 *.tar.gz
@@ -13,11 +17,16 @@
 *.zip
 assets/
 bin/
+obj/
 node_modules/
 vendor/
+tests/
 Dockunit.json
-phpcs.xml
-phpunit.xml
+docker-compose.yml
+Gruntfile.js
+phpcs.xml*
+phpunit.xml*
 Thumbs.db
 wp-cli.local.yml
-
+package*.json
+composer.*
