--- a/.travis.yml
+++ b/.travis.yml
@@ -25,20 +25,49 @@ php:
   - '7.1'
   - '7.0'
   - '5.6'
+
 env:
   matrix:
-    - WP_VERSION=4.6
-    - WP_VERSION=4.7
-    - WP_VERSION=4.8
-    - WP_VERSION=4.9
+    # single site
     - WP_VERSION=5.0
+    - WP_VERSION=5.1
+    - WP_VERSION=5.2
     - WP_VERSION=latest
     - WP_VERSION=trunk
+
+    # multisite
+    - WP_VERSION=5.0
+      WP_MULTISITE=1
+    - WP_VERSION=5.1
+      WP_MULTISITE=1
+    - WP_VERSION=5.2
+      WP_MULTISITE=1
+    - WP_VERSION=latest
+      WP_MULTISITE=1
+    - WP_VERSION=trunk
+      WP_MULTISITE=1
 
 matrix:
   include:
     - php: '7.3'
       env: WP_TRAVISCI=phpcs
+
+    - php: '5.6'
+      env: WP_VERSION=4.6
+    - php: '5.6'
+      env: WP_VERSION=4.7
+    - php: '5.6'
+      env: WP_VERSION=4.8
+    - php: '5.6'
+      env: WP_VERSION=4.9
+    - php: '5.6'
+      env: WP_VERSION=4.6 WP_MULTISITE=1
+    - php: '5.6'
+      env: WP_VERSION=4.7 WP_MULTISITE=1
+    - php: '5.6'
+      env: WP_VERSION=4.8 WP_MULTISITE=1
+    - php: '5.6'
+      env: WP_VERSION=4.9 WP_MULTISITE=1
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
@@ -49,23 +78,22 @@ before_script:
       echo "xdebug.ini does not exist"
     fi
   - |
-    if [[ ! -z "$WP_VERSION" ]] ; then
+    if [[ ! -z "$WP_VERSION" ]] && [[ "$WP_TRAVISCI" != phpcs ]] ; then
       bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
       composer global require "phpunit/phpunit=4.8.*|5.7.*"
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
       composer global require wp-coding-standards/wpcs
-      phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
+      $HOME/.composer/vendor/bin/phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
     fi
 
 script:
   - |
-    if [[ ! -z "$WP_VERSION" ]] ; then
-      phpunit
-      WP_MULTISITE=1 phpunit
+    if [[ ! -z "$WP_VERSION" ]] && [[ "$WP_TRAVISCI" != phpcs ]] ; then
+      $HOME/.composer/vendor/bin/phpunit
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
-      phpcs
+      $HOME/.composer/vendor/bin/phpcs
     fi
