--- a/.travis.yml
+++ b/.travis.yml
@@ -81,6 +81,7 @@ before_script:
     if [[ ! -z "$WP_VERSION" ]] && [[ "$WP_TRAVISCI" != phpcs ]] ; then
       bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
       composer global require "phpunit/phpunit=4.8.*|5.7.*"
+      composer install --no-dev
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
