--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -2,7 +2,10 @@
 <ruleset name="WordPress Coding Standards for Plugins">
 	<description>Generally-applicable sniffs for WordPress plugins</description>
 
-	<rule ref="WordPress-Core" />
+	<rule ref="WordPress-Core">
+		<exclude name="WordPress.Files.FileName.InvalidClassFileName"/>
+		<exclude name="WordPress.Files.FileName.NotHyphenatedLowercase"/>
+	</rule>
 	<rule ref="WordPress-Docs" />
 
 	<rule ref="WordPress.NamingConventions.ValidHookName">
