--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "bowlhat/wp-a-z-listing",
     "description": "The A-Z Listing plugin for WordPress",
     "require-dev": {
-        "phpunit/phpunit": "^8",
+        "phpunit/phpunit": ">= 5",
         "squizlabs/php_codesniffer": "^3.4",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "wp-coding-standards/wpcs": "^2.1"
