--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -1,5 +1,12 @@
 name: $(Date:yyyyMMdd).$(Rev:.r)
 
+resources:
+  containers:
+  - container: mysql
+    image: mysql:5.6
+    ports:
+    - 3306
+
 jobs:
 - template: .azure-pipelines/phpunit.yml
   parameters:
