--- a/.azure-pipelines/phpunit.yml
+++ b/.azure-pipelines/phpunit.yml
@@ -6,7 +6,7 @@ parameters:
 jobs:
 - ${{ each phpver in parameters.phpvers }}:
   - ${{ each wpver in parameters.wpvers }}:
-    - ${{ each doMultisite in multisites }}:
+    - ${{ each doMultisite in parameters.multisites }}:
       - job: PhpUnit
         ${{ if eq(doMultisite, 0) }}:
           displayName: PHPUnit; PHP ${{ phpver }}; WP ${{ wpver }}
