--- a/.azure-pipelines/phpunit.yml
+++ b/.azure-pipelines/phpunit.yml
@@ -7,11 +7,10 @@ jobs:
 - ${{ each phpver in parameters.phpvers }}:
   - ${{ each wpver in parameters.wpvers }}:
     - ${{ each doMultisite in parameters.multisites }}:
-      - job: PhpUnit
-        ${{ if eq(doMultisite, 0) }}:
-          displayName: PHPUnit; PHP ${{ phpver }}; WP ${{ wpver }}
+      - ${{ if eq(doMultisite, 0) }}:
+          job: PHPUnit; PHP ${{ phpver }}; WP ${{ wpver }}
         ${{ if eq(doMultisite, 1) }}:
-          displayName: PHPUnit; PHP ${{ phpver }}; WP ${{ wpver }} (multisite)
+          job: PHPUnit; PHP ${{ phpver }}; WP ${{ wpver }} (multisite)
         pool:
           vmImage: 'ubuntu-16.04'
         container: diddledan/gitlab-php-runner:${{ phpver }}
