--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -11,24 +11,40 @@ jobs:
 - template: .azure-pipelines/phpunit.yml
   parameters:
     phpvers:
-    - '5.6'
-    - '7.0'
-    - '7.1'
-    - '7.2'
-    - '7.3'
+    - name: '5_6'
+      value: '5.6'
+    - name: '7_0'
+      value: '7.0'
+    - name: '7_1'
+      value: '7.1'
+    - name: '7_2'
+      value: '7.2'
+    - name: '7_3'
+      value: '7.3'
     multisite:
-    - false
-    - true
+    - name: ''
+      value: false
+    - name: 'multisite'
+      value: true
     wpvers:
-    - '4.6'
-    - '4.7'
-    - '4.8'
-    - '4.9'
-    - '5.0'
-    - '5.1'
-    - '5.2'
-    - latest
-    - nightly
+    - name: '4_6'
+      value: '4.6'
+    - name: '4_7'
+      value: '4.7'
+    - name: '4_8'
+      value: '4.8'
+    - name: '4_9'
+      value: '4.9'
+    - name: '5_0'
+      value: '5.0'
+    - name: '5_1'
+      value: '5.1'
+    - name: '5_2'
+      value: '5.2'
+    - name: 'latest'
+      value: 'latest'
+    - name: 'nightly'
+      value: 'nightly'
 
 - job: PHPCS
   displayName: PHP Code Sniffer
