--- a/.azure-pipelines/phpunit.yml
+++ b/.azure-pipelines/phpunit.yml
@@ -22,6 +22,8 @@ jobs:
         services:
           mysql: mysql
         steps:
+        - bash: apt-get -yqq update
+        - bash: env DEBIAN_FRONTEND=noninteractive apt-get -yqqf install zip unzip subversion mariadb-client libmariadb-dev --fix-missing
         - bash: bin/install-wp-tests.sh wordpress_test root '' "${AGENT_SERVICES_MYSQL_PORTS_3306}" $WP_VERSION
         - bash: composer global require "phpunit/phpunit=4.8.*|5.7.*"
         - bash: phpunit --log-junit phpunit.xml
