--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -4,8 +4,9 @@ resources:
   containers:
   - container: mysql
     image: mysql:5.6
-    ports:
-    - 3306
+    env:
+      MYSQL_DATABASE: wordpress_tests
+      MYSQL_ROOT_PASSWORD: mysql
 
 jobs:
 - template: .azure-pipelines/phpunit.yml
