--- a/.azure-pipelines/phpunit.yml
+++ b/.azure-pipelines/phpunit.yml
@@ -26,7 +26,7 @@ jobs:
             sudo apt-get -yqq update
             sudo env DEBIAN_FRONTEND=noninteractive apt-get -yqqf install zip unzip subversion mariadb-client libmariadb-dev --fix-missing
           displayName: Install dependencies from APT
-        - bash: bin/install-wp-tests.sh wordpress_test root '' "${AGENT_SERVICES_MYSQL_PORTS_3306}" $WP_VERSION
+        - bash: bin/install-wp-tests.sh wordpress_test root mysql mysql $WP_VERSION
           displayName: Install WordPress tests
         - bash: composer global require "phpunit/phpunit=4.8.*|5.7.*"
           displayName: Install PHPUnit
