--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -20,8 +20,6 @@ jobs:
       value: '7.1'
     - name: '7_2'
       value: '7.2'
-    - name: '7_3'
-      value: '7.3'
     multisite:
     - name: ''
       value: false
@@ -46,6 +44,29 @@ jobs:
       value: 'latest'
     - name: 'nightly'
       value: 'nightly'
+
+- template: .azure-pipelines/phpunit.yml
+  parameters:
+    phpvers:
+    - name: '7_3'
+      value: '7.3'
+    multisite:
+    - name: ''
+      value: false
+    - name: 'multisite'
+      value: true
+    wpvers:
+    - name: '5_0'
+      value: '5.0'
+    - name: '5_1'
+      value: '5.1'
+    - name: '5_2'
+      value: '5.2'
+    - name: 'latest'
+      value: 'latest'
+    - name: 'nightly'
+      value: 'nightly'
+
 
 - job: PHPCS
   displayName: PHP Code Sniffer
