--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
     "name": "bowlhat/wp-a-z-listing",
     "description": "The A-Z Listing plugin for WordPress",
     "require-dev": {
-        "phpunit/phpunit": ">= 5",
         "squizlabs/php_codesniffer": "^3.4",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
-        "wp-coding-standards/wpcs": "^2.1"
+        "wp-coding-standards/wpcs": "^2.1",
+        "phpcompatibility/phpcompatibility-wp": "*"
     },
-    "license": "GPL2+",
+    "license": "GPL-2.0-or-later",
     "authors": [
         {
             "name": "Daniel Llewellyn",
