Update drone config
Signed-off-by: Daniel Llewellyn <daniel@bowlhat.net>

--- a/.drone.yml
+++ b/.drone.yml
@@ -1049,7 +1049,7 @@ steps:
     fork: true
     repositories:
     - a-z-listing/proper-nouns
-    server: https://drone.bowlhat.net/
+    server: https://drone.bowlhat.net
     token:
       from_secret: drone_token
 
