--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -5,12 +5,13 @@ on:
 - pull_request
 
 jobs:
-  stale:
+  phpcs:
 
     runs-on: ubuntu-latest
     
     steps:
-    - uses: bowlhat/action-phpcs-code-review@master
+    - uses: rtCamp/action-phpcs-code-review@master
+      env:
+        GH_BOT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        gh_bot_token: ${{ secrets.GITHUB_TOKEN }}
         args: "WordPress,WordPress-Core,WordPress-Docs"
