--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - uses: actions/checkout@v1
     - uses: rtCamp/action-phpcs-code-review@master
       env:
         GH_BOT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
