Update PHPCS Workflow
Switch to a self-provisioned github token to satisfy automattic/vip-go-ci

--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -13,6 +13,6 @@ jobs:
     - uses: actions/checkout@v1
     - uses: rtCamp/action-phpcs-code-review@master
       env:
-        GH_BOT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_BOT_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
       with:
         args: "WordPress,WordPress-Core,WordPress-Docs"
