--- a/.gitlab-ci/test-matrix.yml
+++ b/.gitlab-ci/test-matrix.yml
@@ -15,6 +15,11 @@ phpcs:
     - .php74-linux
 
 # PHP 7.0
+wordpress46:php70-linux:
+  extends:
+    - .phpunit
+    - .wordpress47
+    - .php70-linux
 wordpress47:php70-linux:
   extends:
     - .phpunit
@@ -45,6 +50,16 @@ wordpress52:php70-linux:
     - .phpunit
     - .wordpress52
     - .php70-linux
+wordpress53:php70-linux:
+  extends:
+    - .phpunit
+    - .wordpress53
+    - .php70-linux
+wordpress54:php70-linux:
+  extends:
+    - .phpunit
+    - .wordpress54
+    - .php70-linux
 WordPress-latest:php70-linux:
   extends:
     - .phpunit
@@ -57,6 +72,11 @@ WordPress-nightly:php70-linux:
     - .php70-linux
 
 # PHP 7.1
+wordpress46:php71-linux:
+  extends:
+    - .phpunit
+    - .wordpress46
+    - .php71-linux
 wordpress47:php71-linux:
   extends:
     - .phpunit
@@ -87,6 +107,16 @@ wordpress52:php71-linux:
     - .phpunit
     - .wordpress52
     - .php71-linux
+wordpress53:php71-linux:
+  extends:
+    - .phpunit
+    - .wordpress53
+    - .php71-linux
+wordpress54:php71-linux:
+  extends:
+    - .phpunit
+    - .wordpress54
+    - .php71-linux
 WordPress-latest:php71-linux:
   extends:
     - .phpunit
@@ -99,6 +129,11 @@ WordPress-nightly:php71-linux:
     - .php71-linux
 
 # PHP 7.2
+wordpress46:php72-linux:
+  extends:
+    - .phpunit
+    - .wordpress46
+    - .php72-linux
 wordpress47:php72-linux:
   extends:
     - .phpunit
@@ -129,6 +164,16 @@ wordpress52:php72-linux:
     - .phpunit
     - .wordpress52
     - .php72-linux
+wordpress53:php72-linux:
+  extends:
+    - .phpunit
+    - .wordpress53
+    - .php72-linux
+wordpress54:php72-linux:
+  extends:
+    - .phpunit
+    - .wordpress54
+    - .php72-linux
 WordPress-latest:php72-linux:
   extends:
     - .phpunit
@@ -141,6 +186,26 @@ WordPress-nightly:php72-linux:
     - .php72-linux
 
 # PHP 7.3
+wordpress46:php73-linux:
+  extends:
+    - .phpunit
+    - .wordpress46
+    - .php73-linux
+wordpress47:php73-linux:
+  extends:
+    - .phpunit
+    - .wordpress47
+    - .php73-linux
+wordpress48:php73-linux:
+  extends:
+    - .phpunit
+    - .wordpress48
+    - .php73-linux
+wordpress49:php73-linux:
+  extends:
+    - .phpunit
+    - .wordpress49
+    - .php73-linux
 wordpress50:php73-linux:
   extends:
     - .phpunit
@@ -156,6 +221,16 @@ wordpress52:php73-linux:
     - .phpunit
     - .wordpress52
     - .php73-linux
+wordpress53:php73-linux:
+  extends:
+    - .phpunit
+    - .wordpress53
+    - .php73-linux
+wordpress54:php73-linux:
+  extends:
+    - .phpunit
+    - .wordpress54
+    - .php73-linux
 WordPress-latest:php73-linux:
   extends:
     - .phpunit
@@ -168,6 +243,26 @@ WordPress-nightly:php73-linux:
     - .php73-linux
 
 # PHP 7.4
+wordpress46:php74-linux:
+  extends:
+    - .phpunit
+    - .wordpress46
+    - .php74-linux
+wordpress47:php74-linux:
+  extends:
+    - .phpunit
+    - .wordpress47
+    - .php74-linux
+wordpress48:php74-linux:
+  extends:
+    - .phpunit
+    - .wordpress48
+    - .php74-linux
+wordpress49:php74-linux:
+  extends:
+    - .phpunit
+    - .wordpress49
+    - .php74-linux
 wordpress50:php74-linux:
   extends:
     - .phpunit
@@ -182,6 +277,16 @@ wordpress52:php74-linux:
   extends:
     - .phpunit
     - .wordpress52
+    - .php74-linux
+wordpress53:php74-linux:
+  extends:
+    - .phpunit
+    - .wordpress53
+    - .php74-linux
+wordpress54:php74-linux:
+  extends:
+    - .phpunit
+    - .wordpress54
     - .php74-linux
 WordPress-latest:php74-linux:
   extends:
@@ -226,6 +331,16 @@ wordpress52-multisite:php70-linux:
     - .phpunit-multisite
     - .wordpress52
     - .php70-linux
+wordpress53-multisite:php70-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress53
+    - .php70-linux
+wordpress54-multisite:php70-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress54
+    - .php70-linux
 WordPress-multisite-latest:php70-linux:
   extends:
     - .phpunit-multisite
@@ -238,6 +353,11 @@ WordPress-multisite-nightly:php70-linux:
     - .php70-linux
 
 # PHP 7.1
+wordpress46-multisite:php71-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress46
+    - .php71-linux
 wordpress47-multisite:php71-linux:
   extends:
     - .phpunit-multisite
@@ -268,6 +388,16 @@ wordpress52-multisite:php71-linux:
     - .phpunit-multisite
     - .wordpress52
     - .php71-linux
+wordpress53-multisite:php71-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress53
+    - .php71-linux
+wordpress54-multisite:php71-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress54
+    - .php71-linux
 WordPress-multisite-latest:php71-linux:
   extends:
     - .phpunit-multisite
@@ -280,6 +410,11 @@ WordPress-multisite-nightly:php71-linux:
     - .php71-linux
 
 # PHP 7.2
+wordpress46-multisite:php72-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress46
+    - .php72-linux
 wordpress47-multisite:php72-linux:
   extends:
     - .phpunit-multisite
@@ -310,6 +445,16 @@ wordpress52-multisite:php72-linux:
     - .phpunit-multisite
     - .wordpress52
     - .php72-linux
+wordpress53-multisite:php72-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress53
+    - .php72-linux
+wordpress54-multisite:php72-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress54
+    - .php72-linux
 WordPress-multisite-latest:php72-linux:
   extends:
     - .phpunit-multisite
@@ -322,6 +467,26 @@ WordPress-multisite-nightly:php72-linux:
     - .php72-linux
 
 # PHP 7.3
+wordpress46-multisite:php73-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress46
+    - .php73-linux
+wordpress47-multisite:php73-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress47
+    - .php73-linux
+wordpress48-multisite:php73-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress48
+    - .php73-linux
+wordpress49-multisite:php73-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress49
+    - .php73-linux
 wordpress50-multisite:php73-linux:
   extends:
     - .phpunit-multisite
@@ -337,6 +502,16 @@ wordpress52-multisite:php73-linux:
     - .phpunit-multisite
     - .wordpress52
     - .php73-linux
+wordpress53-multisite:php73-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress53
+    - .php73-linux
+wordpress54-multisite:php73-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress54
+    - .php73-linux
 WordPress-multisite-latest:php73-linux:
   extends:
     - .phpunit-multisite
@@ -349,6 +524,26 @@ WordPress-multisite-nightly:php73-linux:
     - .php73-linux
 
 # PHP 7.4
+wordpress46-multisite:php74-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress46
+    - .php74-linux
+wordpress47-multisite:php74-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress47
+    - .php74-linux
+wordpress48-multisite:php74-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress48
+    - .php74-linux
+wordpress49-multisite:php74-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress49
+    - .php74-linux
 wordpress50-multisite:php74-linux:
   extends:
     - .phpunit-multisite
@@ -363,6 +558,16 @@ wordpress52-multisite:php74-linux:
   extends:
     - .phpunit-multisite
     - .wordpress52
+    - .php74-linux
+wordpress53-multisite:php74-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress53
+    - .php74-linux
+wordpress54-multisite:php74-linux:
+  extends:
+    - .phpunit-multisite
+    - .wordpress54
     - .php74-linux
 WordPress-multisite-latest:php74-linux:
   extends:
