--- a/.gitlab-ci/build.yml
+++ b/.gitlab-ci/build.yml
@@ -7,14 +7,10 @@ build:
     - ./tools/php-scoper add-prefix
     - composer update --no-dev --optimize-autoloader --prefer-dist --no-interaction --no-progress
     - |
-      [ -s "$HOME/.nvm/nvm.sh" ] && \. "$HOME/.nvm/nvm.sh"; \
+      [ -s "$HOME/.nvm/nvm.sh" ] && \. "$HOME/.nvm/nvm.sh";
       $HOME/.yarn/bin/yarn install --non-interactive --no-progress
-    - |
-      [ -s "$HOME/.nvm/nvm.sh" ] && \. "$HOME/.nvm/nvm.sh"; \
       $HOME/.yarn/bin/yarn build
-    - rm -rf node_modules
-    - |
-      [ -s "$HOME/.nvm/nvm.sh" ] && \. "$HOME/.nvm/nvm.sh"; \
+      rm -rf node_modules
       $HOME/.yarn/bin/yarn install --production --no-bin-links --non-interactive --no-progress
   artifacts:
     name: "$CI_JOB_NAME"
