--- a/.gitlab-ci/_phpunit.yml
+++ b/.gitlab-ci/_phpunit.yml
@@ -5,7 +5,7 @@
     - mysql:5.6
   script:
     - &install-tests
-      bash bin/install-wp-tests.sh wordpress_tests root mysql mysql $WP_VERSION true
+      bash bin/install-wp-tests.sh "${MYSQL_DATABASE:-wordpress}" root "$MYSQL_ROOT_PASSWORD" mysql $WP_VERSION true
     - ./tools/phpunit --log-junit phpunit-results.xml --coverage-text
   artifacts:
     reports:
