Gitlab-CI: Fix phpcs/phpunit installation for php5.6
Signed-off-by: Daniel Llewellyn <daniel@bowlhat.net>

--- a/.gitlab-ci/_phpunit.yml
+++ b/.gitlab-ci/_phpunit.yml
@@ -9,7 +9,7 @@
     - ./tools/phpunit --log-junit phpunit-results.xml --coverage-text
   artifacts:
     reports:
-      junit: phpunit-results.xml.xml
+      junit: phpunit-results.xml
 
 .phpunit-multisite:
   extends: .phpunit
