--- a/.gitlab-ci/prereqs.yml
+++ b/.gitlab-ci/prereqs.yml
@@ -42,13 +42,20 @@ before_script:
     echo "Install yarn"
     curl -sS -L https://yarnpkg.com/install.sh | bash
   - |
-    phive install phpcs --trust-gpg-keys 31C7E470E2138192
+    PHPVERSION="$(php -r 'echo PHP_VERSION;' | cut -d. -f1,2)"
+    if [ "$PHPVERSION" = "5.6" ] || [ "$PHPVERSION" = "7.0" ]; then
+      composer global require squizlabs/php_codesniffer:^3 --prefer-dist --no-interaction --no-progress
+      mkdir -p tools
+      ln -sf $HOME/.composer/vendor/bin/phpunit tools/phpunit
+    else
+      phive install phpcs --trust-gpg-keys 31C7E470E2138192
+    fi
     git clone -b master --depth 1 https://github.com/WordPress/WordPress-Coding-Standards.git /tmp/sniffs
     ./tools/phpcs --config-set installed_paths /tmp/sniffs
   - |
     PHPVERSION="$(php -r 'echo PHP_VERSION;' | cut -d. -f1,2)"
     if [ "$PHPVERSION" = "5.6" ] || [ "$PHPVERSION" = "7.0" ]; then
-      composer global require phpunit/phpunit ^5 --prefer-dist --no-interaction --no-progress
+      composer global require phpunit/phpunit:^5 --prefer-dist --no-interaction --no-progress
       mkdir -p tools
       ln -sf $HOME/.composer/vendor/bin/phpunit tools/phpunit
     else
