Gitlab-CI: Set before_script in .base and extend by phpcs/phpunit
Signed-off-by: Daniel Llewellyn <daniel@bowlhat.net>

--- a/.gitlab-ci/prereqs.yml
+++ b/.gitlab-ci/prereqs.yml
@@ -1,4 +1,5 @@
-before_script:
+.base:
+  before_script:
   - |
     echo "Install base packages"
     apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential \
