--- a/.gitlab-ci/prereqs.yml
+++ b/.gitlab-ci/prereqs.yml
@@ -47,7 +47,7 @@
     if [ "$PHPVERSION" = "5.6" ] || [ "$PHPVERSION" = "7.0" ]; then
       composer global require squizlabs/php_codesniffer:^3 --prefer-dist --no-interaction --no-progress
       mkdir -p tools
-      ln -sf $HOME/.composer/vendor/bin/phpcs tools/phpcs
+      ln -sf $HOME/.composer/vendor/bin/phpunit tools/phpunit
     else
       phive install phpcs --trust-gpg-keys 31C7E470E2138192
     fi
