--- a/.gitlab-ci/_phpunit.yml
+++ b/.gitlab-ci/_phpunit.yml
@@ -5,8 +5,7 @@
   services:
     - mysql:5.6
   script:
-    - &install-tests
-      bash bin/install-wp-tests.sh "${MYSQL_DATABASE:-wordpress}" root "$MYSQL_ROOT_PASSWORD" mysql $WP_VERSION true
+    - bash bin/install-wp-tests.sh "${MYSQL_DATABASE:-wordpress}" root "$MYSQL_ROOT_PASSWORD" mysql $WP_VERSION true
     - ./tools/phpunit --log-junit phpunit-results.xml --coverage-text
   artifacts:
     reports:
@@ -15,5 +14,5 @@
 .phpunit-multisite:
   extends: .phpunit
   script:
-    - *install-tests
+    - bash bin/install-wp-tests.sh "${MYSQL_DATABASE:-wordpress}" root "$MYSQL_ROOT_PASSWORD" mysql $WP_VERSION true
     - ./tools/phpunit -c phpunit-multisite.xml --log-junit phpunit-results.xml --coverage-text
