--- a/.gitlab-ci/build.yml
+++ b/.gitlab-ci/build.yml
@@ -3,18 +3,23 @@ build:
   image: php:7.4
   extends: .base
   script:
-    - phive install humbug/php-scoper@0.11.4 --force-accept-unsigned
-    ## Uncomment if dev dependencies are needed
-    # - composer install --prefer-dist --no-interaction --no-progress --no-suggest
-    # - rm -rf vendor
-    - composer install --no-dev --optimize-autoloader --prefer-dist --no-interaction --no-progress --no-suggest
-    - ./tools/php-scoper add-prefix --no-interaction
+    - phive install https://github.com/humbug/php-scoper/releases/download/0.13.1/php-scoper.phar --force-accept-unsigned
+    - composer install --prefer-dist --no-interaction --no-progress
+    - ./tools/php-scoper add-prefix
+    - composer update --no-dev --optimize-autoloader --prefer-dist --no-interaction --no-progress
     - |
       [ -s "$HOME/.nvm/nvm.sh" ] && \. "$HOME/.nvm/nvm.sh";
-      $HOME/.yarn/bin/yarn install --non-interactive --no-progress
-      $HOME/.yarn/bin/yarn build
-      rm -rf node_modules
-      $HOME/.yarn/bin/yarn install --production --no-bin-links --non-interactive --no-progress
+      if [ -f "yarn.lock" ]; then
+        $HOME/.yarn/bin/yarn install --non-interactive --no-progress
+        $HOME/.yarn/bin/yarn build
+        rm -rf node_modules
+        $HOME/.yarn/bin/yarn install --production --no-bin-links --non-interactive --no-progress
+      else
+        npm install --no-progress --no-audit
+        npm run build
+        rm -rf node_modules
+        npm install --production --no-bin-links --no-progress --no-audit
+      fi
   artifacts:
     name: "$CI_JOB_NAME"
     expire_in: 30 days
