--- a/.gitlab-ci/test-matrix.yml
+++ b/.gitlab-ci/test-matrix.yml
@@ -1,5 +1,7 @@
 include:
   - project: a-z-listing/wp-a-z-listing
+    file: /.gitlab-ci/_prereqs.yml
+  - project: a-z-listing/wp-a-z-listing
     file: /.gitlab-ci/_php.yml
   - project: a-z-listing/wp-a-z-listing
     file: /.gitlab-ci/_phpcs.yml
