--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "description": "The A-Z Listing plugin for WordPress",
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.4",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "wp-coding-standards/wpcs": "^2.1",
-        "phpcompatibility/phpcompatibility-wp": "*"
+        "phpcompatibility/phpcompatibility-wp": "*",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0"
     },
     "license": "GPL-2.0-or-later",
     "authors": [
